# delegated_qc

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
delegated_qc/: __init__.py
delegated_qc/notebooks/: bagel.ipynb
docs/: api.md  conf.py  contributing.md  examples.md  index.md  installation.md
tests/: __init__.py  conftest.py  test_basic.py
